started working on complex types type validation